gcc/testsuite/rust/rustc/ui/typeck/point-at-type-param-in-path-expr.rs
fn foo<T: std::fmt::Display>() {}

fn main() {
    let x = foo::<()>;
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

